{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 60,
  "lineage": "418226e0-e167-d80f-ceee-a02ff41d1fc6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:944734919875:loadbalancer/app/helloworld/6cb59e44b05b12ba",
            "arn_suffix": "app/helloworld/6cb59e44b05b12ba",
            "dns_name": "helloworld-248903886.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:944734919875:loadbalancer/app/helloworld/6cb59e44b05b12ba",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "helloworld",
            "security_groups": [
              "sg-065f9e40a6fff9d15",
              "sg-08211d795f0dc4edd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06c4b89afe48160d6"
              },
              {
                "subnet_id": "subnet-0cecbcd2d50df92ca"
              },
              {
                "subnet_id": "subnet-0ee1f4aef9ec60065"
              }
            ],
            "subnets": [
              "subnet-06c4b89afe48160d6",
              "subnet-0cecbcd2d50df92ca",
              "subnet-0ee1f4aef9ec60065"
            ],
            "vpc_id": "vpc-02f651a6705548aaa",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.app_alb",
            "aws_security_group.unfiltered_egress",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:944734919875:listener/app/helloworld/6cb59e44b05b12ba/81d57e9d78727362",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:944734919875:targetgroup/helloworld/40a8c84f23bfdcac",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:944734919875:listener/app/helloworld/6cb59e44b05b12ba/81d57e9d78727362",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:944734919875:loadbalancer/app/helloworld/6cb59e44b05b12ba",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.app",
            "aws_lb_target_group.helloworld",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "helloworld",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:944734919875:targetgroup/helloworld/40a8c84f23bfdcac",
            "arn_suffix": "targetgroup/helloworld/40a8c84f23bfdcac",
            "deregistration_delay": 120,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:944734919875:targetgroup/helloworld/40a8c84f23bfdcac",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "helloworld",
            "port": 3000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02f651a6705548aaa"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:944734919875:security-group/sg-08211d795f0dc4edd",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08211d795f0dc4edd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-alb",
            "name_prefix": "",
            "owner_id": "944734919875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f651a6705548aaa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:944734919875:security-group/sg-0ce6beb96dad11c2a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ce6beb96dad11c2a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08211d795f0dc4edd"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "ecs",
            "name_prefix": "",
            "owner_id": "944734919875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f651a6705548aaa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "unfiltered_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:944734919875:security-group/sg-065f9e40a6fff9d15",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065f9e40a6fff9d15",
            "ingress": [],
            "name": "unfiltered-egress",
            "name_prefix": "",
            "owner_id": "944734919875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "unfiltered-egress"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f651a6705548aaa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_alb_to_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1440979098",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce6beb96dad11c2a",
            "self": false,
            "source_security_group_id": "sg-08211d795f0dc4edd",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.app_alb",
            "aws_security_group.ecs",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internet_to_app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1552599362",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08211d795f0dc4edd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.app_alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "unfiltered_egress_to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2467660200",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-065f9e40a6fff9d15",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.unfiltered_egress",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0937d50d0008177d6",
            "domain": "vpc",
            "id": "eipalloc-06b053cba7f0c3efa",
            "network_interface": "eni-0ab330297ef9d963e",
            "private_dns": "ip-10-0-101-234.eu-west-1.compute.internal",
            "private_ip": "10.0.101.234",
            "public_dns": "ec2-34-254-166-24.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.254.166.24",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "fargate-eu-west-1a",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-022e0e10acd0ec444",
            "domain": "vpc",
            "id": "eipalloc-0ead8c1667765e5a3",
            "network_interface": "eni-01a3289712d7ebf7b",
            "private_dns": "ip-10-0-102-63.eu-west-1.compute.internal",
            "private_ip": "10.0.102.63",
            "public_dns": "ec2-185-48-122-221.eu-west-1.compute.amazonaws.com",
            "public_ip": "185.48.122.221",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "fargate-eu-west-1b",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a3aa8d1cd2967b4c",
            "domain": "vpc",
            "id": "eipalloc-0050ecb1f9a7bf0e2",
            "network_interface": "eni-09cb7d75b94222706",
            "private_dns": "ip-10-0-103-158.eu-west-1.compute.internal",
            "private_ip": "10.0.103.158",
            "public_dns": "ec2-52-49-135-67.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.49.135.67",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "fargate-eu-west-1c",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:944734919875:internet-gateway/igw-057c2a920580363fa",
            "id": "igw-057c2a920580363fa",
            "owner_id": "944734919875",
            "tags": {
              "Environment": "dev",
              "Name": "fargate",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02f651a6705548aaa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b053cba7f0c3efa",
            "id": "nat-07cefb5b80e313cd0",
            "network_interface_id": "eni-0ab330297ef9d963e",
            "private_ip": "10.0.101.234",
            "public_ip": "34.254.166.24",
            "subnet_id": "subnet-0ee1f4aef9ec60065",
            "tags": {
              "Environment": "dev",
              "Name": "fargate-eu-west-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ead8c1667765e5a3",
            "id": "nat-00f31239393ab38c0",
            "network_interface_id": "eni-01a3289712d7ebf7b",
            "private_ip": "10.0.102.63",
            "public_ip": "185.48.122.221",
            "subnet_id": "subnet-0cecbcd2d50df92ca",
            "tags": {
              "Environment": "dev",
              "Name": "fargate-eu-west-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0050ecb1f9a7bf0e2",
            "id": "nat-050e6641d85d5b2e4",
            "network_interface_id": "eni-09cb7d75b94222706",
            "private_ip": "10.0.103.158",
            "public_ip": "52.49.135.67",
            "subnet_id": "subnet-06c4b89afe48160d6",
            "tags": {
              "Environment": "dev",
              "Name": "fargate-eu-west-1c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0673b6c766c1fcd6b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07cefb5b80e313cd0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0673b6c766c1fcd6b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07181643e9140f4311080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00f31239393ab38c0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07181643e9140f431",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02dc5896c22be68e91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-050e6641d85d5b2e4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02dc5896c22be68e9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-057c2a920580363fa",
            "id": "r-rtb-08703d45f750435971080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08703d45f75043597",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0673b6c766c1fcd6b",
            "owner_id": "944734919875",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07cefb5b80e313cd0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "fargate-private-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02f651a6705548aaa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07181643e9140f431",
            "owner_id": "944734919875",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00f31239393ab38c0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "fargate-private-eu-west-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02f651a6705548aaa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02dc5896c22be68e9",
            "owner_id": "944734919875",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-050e6641d85d5b2e4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "fargate-private-eu-west-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02f651a6705548aaa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08703d45f75043597",
            "owner_id": "944734919875",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-057c2a920580363fa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "fargate-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02f651a6705548aaa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021140ecc10b44fe8",
            "route_table_id": "rtb-0673b6c766c1fcd6b",
            "subnet_id": "subnet-0badedcbf7c74d973"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fbd6711d56aae6c",
            "route_table_id": "rtb-07181643e9140f431",
            "subnet_id": "subnet-010856e2f497f081a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a219f88c682d8817",
            "route_table_id": "rtb-02dc5896c22be68e9",
            "subnet_id": "subnet-04b1c64075f7dcd17"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f05b89cf5383aa4f",
            "route_table_id": "rtb-08703d45f75043597",
            "subnet_id": "subnet-0ee1f4aef9ec60065"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09055adc27b0d578f",
            "route_table_id": "rtb-08703d45f75043597",
            "subnet_id": "subnet-0cecbcd2d50df92ca"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06eba9253c88f824f",
            "route_table_id": "rtb-08703d45f75043597",
            "subnet_id": "subnet-06c4b89afe48160d6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:944734919875:subnet/subnet-0badedcbf7c74d973",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0badedcbf7c74d973",
            "map_public_ip_on_launch": false,
            "owner_id": "944734919875",
            "tags": {
              "Environment": "dev",
              "Name": "fargate-private-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02f651a6705548aaa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:944734919875:subnet/subnet-010856e2f497f081a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-010856e2f497f081a",
            "map_public_ip_on_launch": false,
            "owner_id": "944734919875",
            "tags": {
              "Environment": "dev",
              "Name": "fargate-private-eu-west-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02f651a6705548aaa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:944734919875:subnet/subnet-04b1c64075f7dcd17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-04b1c64075f7dcd17",
            "map_public_ip_on_launch": false,
            "owner_id": "944734919875",
            "tags": {
              "Environment": "dev",
              "Name": "fargate-private-eu-west-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02f651a6705548aaa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:944734919875:subnet/subnet-0ee1f4aef9ec60065",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0ee1f4aef9ec60065",
            "map_public_ip_on_launch": true,
            "owner_id": "944734919875",
            "tags": {
              "Environment": "dev",
              "Name": "fargate-public-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02f651a6705548aaa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:944734919875:subnet/subnet-0cecbcd2d50df92ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0cecbcd2d50df92ca",
            "map_public_ip_on_launch": true,
            "owner_id": "944734919875",
            "tags": {
              "Environment": "dev",
              "Name": "fargate-public-eu-west-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02f651a6705548aaa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:944734919875:subnet/subnet-06c4b89afe48160d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-06c4b89afe48160d6",
            "map_public_ip_on_launch": true,
            "owner_id": "944734919875",
            "tags": {
              "Environment": "dev",
              "Name": "fargate-public-eu-west-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02f651a6705548aaa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:944734919875:vpc/vpc-02f651a6705548aaa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a81fd4ffbcb27fc1",
            "default_route_table_id": "rtb-007fb1fbbe1469ae7",
            "default_security_group_id": "sg-03c3d4bfa31b32383",
            "dhcp_options_id": "dopt-91e2daf7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02f651a6705548aaa",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-007fb1fbbe1469ae7",
            "owner_id": "944734919875",
            "tags": {
              "Environment": "dev",
              "Name": "fargate",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}